Fix leak with python callables as closure argument.

The fix adds an extra args_data list to the PyGIInvokeState
structure. This list is used to track dynamically generated
closures that wrap python callables. This allows the ffi closure
and python callable to be freed when call scope has finished.

https://bugzilla.gnome.org/show_bug.cgi?id=685598